--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الزعيم - مبرمج ومخترق</title>
+    <title>زعيم - مبرمج ومخترق</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         * {
@@ -151,7 +151,7 @@
     
     <header>
         <nav>
-            <div class="logo glitch">ZAEE<span style="color: #ff00ff;">M</span></div>
+            <div class="logo glitch">Z3EM<span style="color: #ff00ff;">M</span></div>
             <div class="nav-links">
                 <a href="#home">الرئيسية</a>
                 <a href="#skills">المهارات</a>
@@ -162,7 +162,7 @@
     </header>
 
     <section class="hero">
-        <h1 class="glitch">مرحبا، أنا الزعيم</h1>
+        <h1 class="glitch">مرحبا، أنا =زعيم</h1>
         <p>مبرمج ومخترق محترف</p>
         <div class="terminal">
             <span>جاري اختراق النظام...</span>
