--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </header>
 
     <section class="hero">
-        <h1 class="glitch">مرحبا، أنا =زعيم</h1>
+        <h1 class="glitch">مرحبا، أنا زعيم</h1>
         <p>مبرمج ومخترق محترف</p>
         <div class="terminal">
             <span>جاري اختراق النظام...</span>
