--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
         <div class="terminal">
             <span>   تابع على التلي...</span>
         </div>
-        <button class="cyber-button"> من انا</button>
+        <a href="https://t.me/eeceo1" target="_blank" rel="noopener noreferrer">
+            <button class="cyber-button">فناتي ضغط هنا </button>
+        </a>
     </section>
 
     <section class="features">
