--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
         <h1 class="glitch">مرحبا، أنا زعيم</h1>
         <p>مبرمج ومخترق محترف</p>
         <div class="terminal">
-            <span>   تابع على التلي...</span>
+            <span>     هلا بيك نورت...</span>
         </div>
         <a href="https://t.me/eeceo1" target="_blank" rel="noopener noreferrer">
-            <button class="cyber-button">فناتي ضغط هنا </button>
+            <button class="cyber-button">قناتي ضغط هنا </button>
         </a>
     </section>
 
